# LanguageLearningProject

./: CMakeLists.txt  README.md  enums.h  exercise.cpp  exercise.h  exercise_widget.cpp  exercise_widget.h  grammar_exercise.cpp  grammar_exercise.h  grammar_exercise_widget.cpp  grammar_exercise_widget.h  help_widget.cpp  help_widget.h  main.cpp  main_menu.cpp  main_menu.h  main_window.cpp  main_window.h  model.cpp  model.h  records_widget.cpp  records_widget.h  result_widget.cpp  result_widget.h  statistics.cpp  statistics.h  translation_exercise.cpp  translation_exercise.h  translation_exercise_widget.cpp  translation_exercise_widget.h  user_records.cpp  user_records.h
